# ganon

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  README.rst  clean.bat  pyproject.toml  setup.cfg  setup.py
cmake/: python_extension_build.cmake
include/ganon/: arrayfunctions.h
src/: CMakeLists.txt
src/ganon/src/data/: CMakeLists.txt  arrayfunctions.c  data.c  datasettype.c
