[metadata]
name = ganon
version = 0.0.1
author = James Calo
author_email = jamesafcalo@gmail.com
description = A Gan Medical Image Learning Framework
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/SagaraBattousai/ganon.git
classifiers = 
  Programming Language :: Python :: 3.9
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent


[options]
package_dir =
    = src
packages = ganon
python_requires = >=3.9.*
setup_requires =
  cemake
install_requires =
  numpy
# include_package_data = True
zip_safe = True

#[options.packages.find]
#where = src
#exclude = 
#  tests

[build_ext]
inplace = 1
debug = 0
parallel = 4
#package = ganon
